fix #253 @gitlab border z-index

--- a/components/style/mixins.less
+++ b/components/style/mixins.less
@@ -21,7 +21,6 @@
     top: auto;
     width: 100%;
     border-bottom: @border-width-sm solid @color;
-    z-index: 15;
   }
 }
 .hairline-right(@color) {
@@ -36,7 +35,6 @@
     height: 100%;
     background-color: @color;
     display: block;
-    z-index: 15;
   }
 }
 // For right and bottom
