--- a/site/mobile/template/KitchenSink/Item.less
+++ b/site/mobile/template/KitchenSink/Item.less
@@ -108,10 +108,8 @@
     right: auto;
     height: 0;
     width: 100%;
-    border-bottom: 1px solid #d9d9d9;
+    border-bottom: 1Px solid #d9d9d9;
     display: block;
-    z-index: 15;
-    transform: scaleY(0.5);  
   }
   &:after {
     top: auto;
